# autodistill

./: .gitignore  LICENSE  README.md  distill.py  prepare.py  program.md  pyproject.toml  run.sh  run_multi.sh  utils.py  validate.py
configs/: default.yaml
models/: student.py  teacher.py
