[project]
name = "autodistill"
version = "0.1.0"
description = "AI Agent 自主蒸馏实验框架"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "pyyaml>=6.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
